--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.6.1",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.0.1",
     "nodemon": "^2.0.7",
+    "prettier": "2.3.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
