--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node index.ts",
     "watch": "nodemon index.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
