check lint-staged

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
-    "*.ts": "eslint --cache --fix",
+    "*.ts": "eslint --quiet --fix",
     "*.js": "eslint --cache --fix",
     "*.{js,css,md}": "prettier --write"
   }
