--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
-    "watch": "nodemon index.ts",
+    "start": "ts-node src/index.ts",
+    "watch": "nodemon src/index.ts",
     "build": "tsc",
     "test": "jest",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
